--- a/app/containers/App/App.css
+++ b/app/containers/App/App.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap');
 
-* {
+html {
   font-size: 62.5%;
   font-family: 'Roboto', sans-serif;
 }
@@ -15,8 +15,18 @@ a:visited {
   text-decoration: none;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 .container {
   max-width: 120rem;
+  margin: auto;
+}
+
+.main-container {
+  display: flex;
+  flex-direction: column;
 }
 
 @media (max-width: 1200px) {
