feat: adds call data table with duration slider

--- a/app/containers/App/App.css
+++ b/app/containers/App/App.css
@@ -24,6 +24,11 @@ a:visited {
   margin: auto;
 }
 
+button {
+  outline: none;
+  border: none;
+}
+
 .main-container {
   display: flex;
   flex-direction: column;
